--- a/.emacs.d/l_init.org
+++ b/.emacs.d/l_init.org
@@ -373,7 +373,7 @@ This needs a ton of work
 #+END_SRC
 
 
-* Terminal
+* Terminals
 
 Vterm ftw
 
@@ -390,6 +390,22 @@ Vterm ftw
     (setq vterm-always-compile-module t)
     (setq vterm-copy-exclude-prompt t))
 #+END_SRC
+
+
+** Eshell configuration
+
+Make eshell pop under the main window and not create a window of it's
+own.
+
+#+begin_src emacs-lisp
+  (use-package eshell-toggle
+    :after eshell
+    :bind ("C-M-'" . eshell-toggle)
+    :custom
+    (eshell-toggle-size-fraction 3)
+    (eshell-toggle-use-projectile-root t)
+    (eshell-toggle-run-command nil))
+#+end_src
 
 
 * Code utilities
